# rakt

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  food-truck-data.csv  gunicorn.conf.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: settings.py  urls.py
src/apps/core/: admin.py  models.py  serializers.py  views.py
src/apps/core/management/commands/: populate_food_trucks.py
src/apps/core/migrations/: 0001_initial.py
tests/apps/core/: test_nearest_food_trucks_view.py
tests/apps/core/management/commands/: food-truck-data-test.csv  test_populate_food_trucks.py
